crates/oxc_react_compiler/tests/snapshots/jsx-attribute-default-to-true.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-attribute-default-to-true.tsx
---
import { c as _c } from "react/compiler-runtime";
import { Stringify } from "shared-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Stringify truthyAttribute={true} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
