crates/oxc_react_compiler/tests/snapshots/jsx-empty-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-empty-expression.js
---
import { c as _c } from "react/compiler-runtime";
export function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.a) {
		t0 = <div>{props.a}</div>;
		$[0] = props.a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ a: "hello" }]
};
